# disambiguation

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
communication/: Makefile.am  Makefile.in  connection.cc  connection.h  disambiguation_request.proto  network.c  network.cc  network.h
create/: Makefile.am  Makefile.in  clustering_metis.cc  clustering_metis.h  parse_graph.c  parse_graph.cc  parse_graph.h  weights_combi.c  weights_combi.cc  weights_combi.h  wsd-create.c  wsd-create.cc
disambiguation/: Makefile.am  Makefile.in  disambiguation.cc  disambiguation.h  wsd-disambiguation.cc  wsd_relatedness_worker.cc  wsd_relatedness_worker.h
graph/: Makefile.am  Makefile.in  graphio.c  graphio.cc  khash.h  rgraph.c  rgraph.cc  rgraph.h  rgraph_clustered.cc  rgraph_weighted.cc
java/: Makefile.am  Makefile.in  pom.xml
java/src/main/java/eu/mico/disambiguation/client/: DisambiguationClient.java  DisambiguationParser.java  DisambiguationWriter.java
java/src/test/java/eu/mico/disambiguation/client/test/: DisambiguationClientTest.java
python/: Makefile.am  Makefile.in  disambiguation_client.py  test-dbp.py
relatedness/: Makefile.am  Makefile.in  pqueue.h  relatedness_base.h  relatedness_cluster.cc  relatedness_cluster.h  relatedness_dfs.cc  relatedness_dfs.h  relatedness_shortest_path.cc  relatedness_shortest_path.h  wsd-relatedness.cc
src/: Makefile.am  Makefile.in  RelatednessBase.h  RelatednessShortestPath.cc  RelatednessShortestPath.h  RelatednessWorker.h  config.h  create_graph.c  disambiguation.c  disambiguation.cc  disambiguation.h  graphio.c  graphio.h  khash.h  network.c  network.h  parse_graph.c  parse_graph.h  parse_uri_nodes.c  parse_uri_nodes.h  pq-test.c  pqueue.c  pqueue.h  proto-disambiguation.proto  relatedness.c  relatedness.h  rgraph.c  rgraph.h  weights_combi.c  weights_combi.h  worker.cc  worker.h  wsd-create.c  wsd-debug.c  wsd-debug.cc  wsd-disambiguation.c  wsd-disambiguation.cc  wsd-query.c  wsd-query.cc  wsd-relatedness.c
threading/: Makefile.am  Makefile.in  test_thread.cc  thread.cc  thread.h
